XTree refactoring